@@ -4,6 +4,9 @@
 //
 //===========================================================================
 
+1st July 2013 Daniel Craik
+     Added auto-install script for R01-02-00.
+
 R01-02-00-------------------------------------------------------------------
 15th May 2013 John Back
      New tag, version "1.2.0", incorporating all changes below.
